--- a/POPO/Application/Info.plist
+++ b/POPO/Application/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>갤러리 접근을 허가해 주세요~</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>갤러리 접근을 허가해 주세요~</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
